# Bitcoin-Ingestion-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
.github/workflows/: docker-publish.yml
src/: main.rs  server.rs
src/config/: connections.rs
src/services/: bitcoin_rpc.rs  ingestion.rs  mod.rs  mysql_connection.rs
tests/: test_rpc_fn.rs
